sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:13: error: type mismatch;
 found   : Double
 required: Int
    if(plusPetit(x-1,x))
                  ^AlgGnomeSort:13: error: type mismatch;
 found   : Double
 required: Int
    if(plusPetit(x-1,x))
                     ^AlgGnomeSort:19: error: type mismatch;
 found   : Double
 required: Int
      echange(x-1,x)
               ^AlgGnomeSort:19: error: type mismatch;
 found   : Double
 required: Int
      echange(x-1,x)
                  ^