sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  val n = getNombreValeurs()
  var x = 0.5
  var end = false
  
  while(x!=n-1)
  {
    if(x==0)
    {
      x+=1
    }
    if(plusPetit(x-1,x))
    {
    	x+=1
    }
    else
    {
      echange(x-1,x)
      x-=1
    }
  }
}